# deephealth-pipelines

./: LICENSE  PROMORT_NDPI_TEST.dvc  README.md  airflow_settings.env  compose-proxy.sh  compose.sh  create_env.sh  deploy.sh  docker-compose.backend.override.yml  docker-compose.backend.yaml  docker-compose.omero.yaml  docker-compose.override.yml  docker-compose.promort.yaml  docker-compose.proxy.yaml  docker-compose.yaml  dvc.yaml  env.template  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: main.yaml
airflow/: docker-compose.yaml  load_slides.py
airflow/dags/: predictions.py  predictions.yml  watch_dir.py
cwl/: classify-tumor.cwl  classify_tumor.cwl  deephealth-pipeline.cwl  extract_tissue.cwl  global_pipeline.cwl  pipeline-params.yaml  predictions.cwl
data/dags/: pipeline.py  predictions.py  start_pipeline.py  utils.py
promort_config/: config.yaml  config.yaml.template
scripts/: bashrc-docker-gpu  create_user.py  gen_crate.py  init.sh
scripts/promort/: 81_create_user.sh
scripts/prov_crate/: Dockerfile  gen_crate.py  requirements.txt
scripts/prov_crate/tests/: run.sh
scripts/prov_crate/tests/data/: metadata.yaml  params.json
scripts/provenance/: Dockerfile  provenance.py  requirements.txt
scripts/provenance/tests/: test_provenance.py
slide-importer/: Dockerfile  pyproject.toml
slide-importer/slide_importer/: local.py
slide-importer/tests/: test_slide_importer.py
tests/: README.md  importer.sh  integration.sh  provenance.sh  rocrate.sh  run.sh  run_all.sh
tests/promort/: test.py  test.sh
(+7 files in other folders)
