[tool.poetry]
name = "deephealth-pipelines"
version = "0.1.0"
description = "Pipeline for predicting tissues and tumors on WSI in the context of the DeepHealth Project"
authors = ["Mauro Del Rio <mauro@crs4.it>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"
cwl-airflow = {git = "https://github.com/mdrio/cwl-airflow.git", rev = "develop"}
rocrate = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
